tests/snapshots/examples_fixtures/type_system__failing__08_compile_identifier_type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/08_compile_identifier_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify String with Int.

  --> examples/type_system/failing/08_compile_identifier_type_mismatch.flx:2:8
  |
2 | let n: Int = value
  |        ^^^
  |        --- expected String, found Int


--> compiler error[E055]: TYPE MISMATCH

Expected Int, got String.

  --> examples/type_system/failing/08_compile_identifier_type_mismatch.flx:2:14
  |
2 | let n: Int = value
  |              ^^^^^
  |              ----- initializer type is known at compile time

Help:
  binding initializer does not match type annotation

Found 2 errors.
== stdout ==
<not executed>
